# minirag-sample

./: README.md  pyproject.toml
src/: main.py
src/rag/: llm_agent.py  prompts.py  rag_agent.py
vector_store/: chroma.sqlite3
