[tool.poetry]
name = "minirag-sample"
version = "0.1.0"
description = ""
authors = ["Miguel Amato <miamato@ucm.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.66.3"
dotenv = "^0.9.9"
pandas = "^2.2.3"
chromadb = "^0.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
